* parse.y (program): Always call finish_translation_unit. 	* parse.c, parse.h: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34629 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-21  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* parse.y (program): Always call finish_translation_unit.
+	* parse.c, parse.h: Rebuilt.
+
 2000-06-20  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* method.c: Don't include hard-reg-set.h.
