--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-20  Jason Merrill  <jason@redhat.com>
+
+	* pt.c (tsubst_decl, case TYPE_DECL): Fix test for TYPE_DECLs 
+	for which we don't need to look for instantiations.
+
 2000-06-21  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* parse.y (program): Always call finish_translation_unit.
