* invoke.texi (g++): "g++" is not a script anymore.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34634 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jun 21 11:05:48 2000  Martin Buchholz <martin@xemacs.org>
+
+	* invoke.texi (g++): "g++" is not a script anymore.
+
 2000-06-20  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* function.c (round_down): Delete obsolete prototype.
