--- a/gcc/invoke.texi
+++ b/gcc/invoke.texi
@@ -658,7 +658,7 @@ circumstances, you might want to compile programs from standard input,
 or otherwise without a suffix that flags them as C++ programs.
 @code{g++} is a program that calls GCC with the default language
 set to C++, and automatically specifies linking against the C++
-library.  On many systems, the script @code{g++} is also
+library.  On many systems, @code{g++} is also
 installed with the name @code{c++}.
 
 @cindex invoking @code{g++}
