--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-20  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* class.c (push_lang_context): TYPE_NAME gets you to the Java
+	types DECLs.
+	* decl.c (check_goto): Computed gotos assumed OK.
+
 2000-06-20  Jason Merrill  <jason@redhat.com>
 
 	* pt.c (tsubst_decl, case TYPE_DECL): Fix test for TYPE_DECLs 
