* g++.old-deja/g++.pt/vaarg2.C: New test. 	* g++.old-deja/g++.pt/vaarg3.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34646 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-22  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.pt/vaarg2.C: New test.
+	* g++.old-deja/g++.pt/vaarg3.C: New test.
+
 2000-06-20  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.other/dyncast6.C: New test.
