--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-06-22  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.other/init15.C: New test.
+
+2000-06-22  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.pt/vaarg2.C: New test.
 	* g++.old-deja/g++.pt/vaarg3.C: New test.
 
