--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-22  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20000622-1.c: New test.
+
 2000-06-22  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.other/init15.C: New test.
