* config/ia64/ia64.md (pred_rel_mutex): Only take one register.         * config/ia64/ia64.c (emit_predicate_relation_info): Adjust to match.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34661 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-23  Richard Henderson  <rth@cygnus.com>
+
+	* config/ia64/ia64.md (pred_rel_mutex): Only take one register.
+	* config/ia64/ia64.c (emit_predicate_relation_info): Adjust to match.
+
 2000-06-22  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* varasm.c (constant_descriptor): Make contents unsigned char.
