* calls.c (compute_argument_addresses): Force stack slots into 	alias set 0. 	* expr.c (emit_push_insn): Force pushes into alias set 0.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34662 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* calls.c (compute_argument_addresses): Force stack slots into
+	alias set 0.
+	* expr.c (emit_push_insn): Force pushes into alias set 0.
+
 2000-06-23  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/ia64.md (pred_rel_mutex): Only take one register.
