--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2000-06-23  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* cpplib.c (struct pragma_entry): New structure.
+	(pragma_dispatch): Pragma dispatcher.
+	(top_pragmas, gcc_pragmas): New static variables.
+	(do_pragma): Use pragma_dispatch.
+	(do_pragma_gcc): New pragma handler.
+	* cpp.texi: Update.
+
 2000-06-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* calls.c (compute_argument_addresses): Force stack slots into
