--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-23  Andrew Haley  <aph@cygnus.com>
+
+	* java/lang/ieeefp.h: Handle ia64, fr30, mcore.
+	* java/lang/natThrowable.cc: On IA-64, use __ia64_backtrace.
+
 2000-06-23  Tom Tromey  <tromey@cygnus.com>
 
 	* java/lang/reflect/natMethod.cc: Include <alloca.h>.
