* alias.c (fixed_scalar_and_varying_struct_p): Don't examine struct vs. scalar-ness when -fno-strict-aliasing.
and a test case to test it, gcc.dg/20000623-1.c.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34668 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-23  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* gcc.dg/20000623-1.c: New test.
+
 2000-06-22  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20000622-1.c: New test.
