--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-23  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* alias.c (fixed_scalar_and_varying_struct_p): Don't examine
+	struct vs. scalar-ness when -fno-strict-aliasing.
+
 2000-06-23  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* cpplib.c (struct pragma_entry): New structure.
