* cpp.texi: Clarify #pragma GCC namespace.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34676 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-24  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* cpp.texi: Clarify #pragma GCC namespace.	
+
 2000-06-24  Philipp Thomas  <pthomas@suse.de>
 
 	* aclocal.m4(AM_GNU_GETTEXT): If LINGUAS isn't set, build
