--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* stmt.c (expand_decl_cleanup): Emit a dummy insn after
+	last_unconditional_cleanup.
+
 2000-06-24  Bernd Schmidt  <bernds@cygnus.co.uk>
 
 	* tree.def (VECTOR_TYPE): New node type.
