* decl.c (pushdecl): Don't set DECL_CONTEXT from current_namespace.         (push_namespace): Set DECL_CONTEXT for a new NAMESPACE_DECL.
        * parse.y (complex_direct_notype_declarator): Support global_scope.
        * Makefile.in: Adjust conflict count.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34686 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,13 @@
+2000-06-24  Jason Merrill  <jason@redhat.com>
+
+	* decl.c (pushdecl): Don't set DECL_CONTEXT from current_namespace.
+	(push_namespace): Set DECL_CONTEXT for a new NAMESPACE_DECL.
+
+2000-06-24  Martin v. Löwis  <loewis@informatik.hu-berlin.de>
+
+	* parse.y (complex_direct_notype_declarator): Support global_scope.
+	* Makefile.in: Adjust conflict count.
+
 2000-06-23  Kriang Lerdsuwanakij <lerdsuwa@scf.usc.edu>
 
 	* parse.y (template_arg): Convert TEMPLATE_DECL
