* mklibgcc.in: Prefer LIB1ASMFUNCS over LIB2FUNCS when generating 	libgcc.a.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34690 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-25 Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
+
+	* mklibgcc.in: Prefer LIB1ASMFUNCS over LIB2FUNCS when generating
+	libgcc.a.
+
 2000-06-24  Marc Espie <espie@cvs.openbsd.org>
 
 	* collect2.c (resolve_lib_name): Move '/' check to more rational place.
