--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-24  Tom Tromey  <tromey@cygnus.com>
+
+	* parse.y (check_abstract_method_definitions): Also check if
+	`other_method' is abstract.
+
 2000-06-23  Tom Tromey  <tromey@cygnus.com>
 
 	* parse.y (patch_incomplete_class_ref): Initialize the returned
