* expr.c (lookup_field): Print error and return error_mark_node if 	field reference is ambiguous.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34698 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,8 @@
 2000-06-24  Tom Tromey  <tromey@cygnus.com>
 
+	* expr.c (lookup_field): Print error and return error_mark_node if
+	field reference is ambiguous.
+
 	* parse.y (check_abstract_method_definitions): Also check if
 	`other_method' is abstract.
 
