--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-26  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
+	* mklibgcc.in (LIB2FUNCS): Add missing space.
+
 2000-06-24  Bernd Schmidt  <bernds@cygnus.co.uk>
 
 	* tree.h (enum tree_index): Add vector type nodes.
