--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-25 Theodore Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>
+
+        * gengenrtl.c (special_rtx): Fix typo in comment.
+
 2000-06-26  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
 	* mklibgcc.in (LIB2FUNCS): Add missing space.
