--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2000-06-25 Theodore Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>
+
+        * search.c (lookup_member): Fix typo in comment.
+
 2000-06-24  Jason Merrill  <jason@redhat.com>
 
 	* decl.c (pushdecl): Don't set DECL_CONTEXT from current_namespace.
