--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-26  Philipp Thomas  <pthomas@suse.de>
+
+	* aclocal.m4 (AM_WITH_NLS): Don't set MSGFMT or GMSGFMT to no,
+	test for msgfmt without path instead.
+	* configure: Rebuilt.
+
 2000-06-25 Theodore Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>
 
         * gengenrtl.c (special_rtx): Fix typo in comment.
