--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-25  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.y (do_resolve_class): Minor optimiztion in the package
+	list search. Removed unecessary test and return statement.
+	(valid_ref_assignconv_cast_p): Order of arguments to
+	enclosing_context_p fixed.
+
 2000-06-24  Tom Tromey  <tromey@cygnus.com>
 
 	* expr.c (lookup_field): Print error and return error_mark_node if
