* g++.old-deja/g++.pt/syntax1.C: New test. 	* g++.old-deja/g++.pt/syntax2.C: New test. 	* g++.old-deja/g++.other/syntax3.C: New test. 	* g++.old-deja/g++.other/syntax4.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34708 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2000-06-26  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.pt/syntax1.C: New test.
+	* g++.old-deja/g++.pt/syntax2.C: New test.
+	* g++.old-deja/g++.other/syntax3.C: New test.
+	* g++.old-deja/g++.other/syntax4.C: New test.
+
 2000-06-25  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.dg/20000623-1.c: Prototype exit and abort.
