--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,13 @@
 2000-06-26  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* search.c (hides): Remove.
+	(is_subobject_of_p): Add most_derived parameter. Use
+	CANONICAL_BINFO.
+	(lookup_field_queue_p): Adjust.
+	(lookup_field_r): Adjust.
+
+2000-06-26  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* decl2.c (handle_class_head): Bash typedefs to the type's main
 	decl.
 
