--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-06-26  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.other/ambig3.C: New test.
+
+2000-06-26  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.pt/syntax1.C: New test.
 	* g++.old-deja/g++.pt/syntax2.C: New test.
 	* g++.old-deja/g++.other/syntax3.C: New test.
