--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-06-25  Tom Tromey  <tromey@cygnus.com>
+
+	* parse.y (for_statement): Wrap expression in a WFL if it is a
+	constant.  For PR gcj/268.
+
 2000-06-25  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (do_resolve_class): Minor optimiztion in the package
